[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/menu_screen/menu_screen.gd" type="Script" id=1]
[ext_resource path="res://fonts/time_and_space/TimeandSpace-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/menu_screen/multiplayer_panel.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 27
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 34
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 27
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 2 )

[node name="MenuScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.715851
margin_top = -0.715851
margin_right = 0.71582
margin_bottom = -0.71582
script = ExtResource( 1 )

[node name="MainPanel" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -480.0
margin_right = 480.0
custom_constants/separation = 10

[node name="StatusBar" type="HBoxContainer" parent="MainPanel"]
margin_right = 960.0
margin_bottom = 49.0

[node name="PlayerInfo" type="HBoxContainer" parent="MainPanel/StatusBar"]
margin_right = 353.0
margin_bottom = 49.0
custom_constants/separation = 30

[node name="Name" type="Label" parent="MainPanel/StatusBar/PlayerInfo"]
margin_top = 3.0
margin_right = 99.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "Name: -"

[node name="Title" type="Label" parent="MainPanel/StatusBar/PlayerInfo"]
margin_left = 129.0
margin_top = 3.0
margin_right = 214.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "Title: -"

[node name="Points" type="Label" parent="MainPanel/StatusBar/PlayerInfo"]
margin_left = 244.0
margin_top = 3.0
margin_right = 353.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
text = "Points: -"

[node name="Placeholder" type="Control" parent="MainPanel/StatusBar"]
margin_left = 357.0
margin_right = 653.0
margin_bottom = 49.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MainPanel/StatusBar"]
margin_left = 657.0
margin_right = 960.0
margin_bottom = 49.0
custom_constants/separation = 15

[node name="Button" type="Button" parent="MainPanel/StatusBar/HBoxContainer2"]
margin_right = 166.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
text = "Multiplayer"

[node name="Button2" type="Button" parent="MainPanel/StatusBar/HBoxContainer2"]
margin_left = 181.0
margin_right = 303.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
text = "Settings"

[node name="Chapters" type="ScrollContainer" parent="MainPanel"]
margin_top = 59.0
margin_right = 960.0
margin_bottom = 540.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Vertical" type="VBoxContainer" parent="MainPanel/Chapters"]
margin_right = 960.0
margin_bottom = 481.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30

[node name="LoadPanel" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="LoadPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )

[node name="Panel" type="Panel" parent="LoadPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -194.0
margin_top = -32.0
margin_right = 194.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="LoadPanel/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -194.0
margin_top = -16.5
margin_right = 194.0
margin_bottom = 16.5
custom_fonts/font = SubResource( 2 )
text = "loading title ..."
align = 1
valign = 1

[node name="LevelPanel" type="Control" parent="."]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="LevelPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )

[node name="Panel" type="Panel" parent="LevelPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -233.0
margin_top = -104.0
margin_right = 233.0
margin_bottom = 104.0

[node name="Margin" type="MarginContainer" parent="LevelPanel/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Vertical" type="VBoxContainer" parent="LevelPanel/Panel/Margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 446.0
margin_bottom = 188.0
custom_constants/separation = 5

[node name="Title" type="Label" parent="LevelPanel/Panel/Margin/Vertical"]
margin_right = 426.0
margin_bottom = 42.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 3 )
text = "Select Level"
align = 1

[node name="LevelName" type="Label" parent="LevelPanel/Panel/Margin/Vertical"]
margin_top = 50.0
margin_right = 426.0
margin_bottom = 83.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 4 )
text = "The name of the level"

[node name="IsMultiplayer" type="Label" parent="LevelPanel/Panel/Margin/Vertical"]
margin_top = 99.0
margin_right = 426.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 5 )
text = "Multiplayer: Yes"

[node name="Buttons" type="HBoxContainer" parent="LevelPanel/Panel/Margin/Vertical"]
margin_top = 137.0
margin_right = 426.0
margin_bottom = 168.0

[node name="Cancel" type="Button" parent="LevelPanel/Panel/Margin/Vertical/Buttons"]
margin_right = 211.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "cancel"

[node name="Play" type="Button" parent="LevelPanel/Panel/Margin/Vertical/Buttons"]
margin_left = 215.0
margin_right = 426.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
text = "play"

[node name="MultiplayerPanel" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="pressed" from="MainPanel/StatusBar/HBoxContainer2/Button" to="." method="_on_multiplayer_button_pressed"]
[connection signal="pressed" from="LevelPanel/Panel/Margin/Vertical/Buttons/Cancel" to="." method="_on_cancel_level_pressed"]
[connection signal="pressed" from="LevelPanel/Panel/Margin/Vertical/Buttons/Play" to="." method="_on_start_level_pressed"]
